# sre-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  README.md  pyproject.toml
docs/plans/: 2026-04-30-sre-copilot-design.md
k8s/charts/sre-bot/: Chart.yaml  values.yaml
k8s/charts/sre-bot/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  role.yaml  rolebinding.yaml  secret.yaml  service.yaml  serviceaccount.yaml
k8s/helm-values/: kube-prometheus-stack.yaml  loki.yaml  tempo.yaml
k8s/kind/: cluster-config.yaml
k8s/manifests/: sre-copilot.yaml
k8s/scripts/: setup-cluster.sh  teardown-cluster.sh
src/sre_bot/: __init__.py  config.py  main.py
src/sre_bot/agent/: graph.py  state.py
src/sre_bot/agent/nodes/: __init__.py  extract_context.py  fetch_github.py  fetch_kubernetes.py  fetch_logs.py  fetch_metrics.py  fetch_traces.py  post_to_slack.py  synthesize.py
src/sre_bot/clients/: github.py  kubernetes.py  loki.py  prometheus.py  protocols.py  tempo.py
src/sre_bot/db/: __init__.py  repository.py
src/sre_bot/integrations/: __init__.py  slack.py  webhook.py
src/sre_bot/llm/: __init__.py  factory.py
src/sre_bot/queries/: kube_state_metrics.py  prometheus.py  tempo.py
src/sre_copilot/: __init__.py  config.py  main.py
src/sre_copilot/agent/: __init__.py  graph.py  state.py
src/sre_copilot/agent/nodes/: __init__.py  extract_context.py  fetch_github.py  fetch_kubernetes.py  fetch_logs.py  fetch_metrics.py  fetch_traces.py  post_to_slack.py  synthesize.py
src/sre_copilot/clients/: github.py  kubernetes.py  loki.py  prometheus.py  protocols.py  tempo.py
src/sre_copilot/db/: models.py  repository.py
src/sre_copilot/integrations/: slack.py  webhook.py
src/sre_copilot/llm/: factory.py
src/sre_copilot/queries/: __init__.py  kube_state_metrics.py  loki.py  prometheus.py  tempo.py
src/sre_copilot/tools/: __init__.py
tests/: conftest.py
tests/examples/: mock.sh
tests/fixtures/: sample_alerts.py
tests/unit/: test_config.py  test_nodes.py  test_queries.py  test_state.py
